force-app/main/default/objects/VoiceCall/fields/PkgField10__c.field-meta.xml
<CustomField>
    <fullName>PkgField10__c</fullName>
    <label>PkgField10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>