force-app/main/default/objects/VoiceCall/fields/PkgField11__c.field-meta.xml
<CustomField>
    <fullName>PkgField11__c</fullName>
    <label>PkgField11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>