force-app/main/default/objects/VoiceCall/fields/PkgField12__c.field-meta.xml
<CustomField>
    <fullName>PkgField12__c</fullName>
    <label>PkgField12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>